--- a/rats_for_nbviewer_only.ipynb
+++ b/rats_for_nbviewer_only.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "This is the heat map described in my Medium article on NYC's rat issue: https://towardsdatascience.com/rat-city-visualizing-new-york-citys-rat-problem-f7aabd6900b2. \n",
     "\n",
-    "To check out your neighborhood, simply use the **+ / -** buttons to zoom in and out and use your muse to move the map by clicking & dragging."
+    "To check out your neighborhood, simply use the **+ / -** buttons to zoom in and out and use your mouse to move the map by clicking and dragging."
    ]
   },
   {
